@@ -1,3 +1,7 @@
+2006-05-03  Hans de Graaff  <hans@degraaff.org>
+
+	* Checkbot 1.78 is released
+
 2005-12-18  Hans de Graaff  <hans@degraaff.org>
 
 	* checkbot (printServerProblems): Make pages XHTML compliant again.
